<resources>
    <string name="app_name">MyCalendar</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="mainTitle">View Schedule</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="monthTitle">Monthly Schedule</string>
    <string name="monthText">%1$d year %2$d month</string>
    <string name="prevMonth">prevM</string>
    <string name="nextMonth">nextM</string>
    <string name="weeklyTitle">Weekly Schedule</string>
    <string name="weekText">%1$d year %2$d month\n%3$d week</string>
    <string name="prevWeek">prevW</string>
    <string name="nextWeek">nextW</string>
    <string name="scheduleTitle">%1$d year %2$d month %3$d day</string>
    <string name="scheduleAdd">Add</string>
    <string name="scheduleStartOverEnd">StartDate can not be greater than EndDate\n Please type again</string>
    <string name="scheduleDateNull">StartDate and EndDate should not be null</string>
    <string name="scheduleTextNull">Type content</string>
    <string name="scheduleEmpty">Schedule is empty</string>
    <string name="scheduleAddTitle">Add Schedule</string>
    <string name="scheduleContents">Content</string>
    <string name="scheduleStart">Start</string>
    <string name="scheduleStartHint1">StartDate</string>
    <string name="scheduleStartHint2">StartTime</string>
    <string name="scheduleEnd">End</string>
    <string name="scheduleEndHint1">EndDate</string>
    <string name="scheduleEndHint2">EndTime</string>
    <string name="ok">OK</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="to">~</string>
    <string name="deletedMsg">It has been deleted</string>
    <string name="addedMsg">It has been added</string>
    <string name="modifyMsg">It has been modified</string>
    <string name="upcomingTitle">Upcoming Events</string>
    <string name="str_view">View</string>
    <string name="str_fileio">File IO</string>
    <string name="str_upcoming">Upcoming</string>
    <string name="str_board">Board</string>
    <string name="str_email">Email</string>
    <string name="str_about">About</string>
    <string name="str_viewevents">View Events</string>
    <string name="str_weekly">Weekly</string>
    <string name="str_monthly">Monthly</string>
    <string name="str_exit">Press the back key again to exit from the App</string>
    <string name="email_subject">Subject of email</string>
    <string name="email_body">Body of email</string>
    <string name="email_send">Send mail...</string>
    <string name="tv_detail">Detail</string>
    <string name="tv_detail_name">Name : myCalendar</string>
    <string name="tv_detail_vers">Ver  : V 1.0.0</string>
    <string name="tv_developer">Developer</string>
    <string name="tv_developer_name">DAECHEOL, KANG</string>
    <string name="tv_developer_univ">HANYANG UNIV.</string>
    <string name="tv_developer_num">+82 10 9331 1501</string>
    <string name="tv_developer_email">doddldod@hanyang.ac.kr</string>
    <string name="tv_dcslab">DCS Lab, Hanyang University</string>
    <string name="bt_submit">Submit</string>
    <string name="NoLogin">You have to sign in googlle</string>
    <string name="NothingInContent">Nothing in Memo</string>
    <string name="NothingInSchedule">Nothing in Schedule</string>
    <string name="Title_Delete">Delete</string>
    <string name="BT_Delete">The msg has been deleted</string>
    <string name="BT_CantDelete">You don\'t have permission to delete it</string>
    <string name="fileio">File IO</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="saved">It has been saved</string>
    <string name="fileError">FileIO Error</string>
    <string name="loadfromfile">Schedules are loaded from file</string>
    <string name="repeat">Repeat</string>
    <string name="clear">Clear</string>
    <string name="dbclear">DB has been cleared</string>
    <string name="howmanyupcoming">How many Upcoming Events?</string>
    <string name="regist">Regist</string>
    <string name="dayofweek">Select day of week</string>
	<string name="backuptoemail">Backup to email</string>
	<string name="backup">Backup</string>
</resources>