<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gray_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/tab_normal"
        android:gravity="left" >

        <LinearLayout
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/tab_button_selector"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:paddingRight="11dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/button_back_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/monthTitle"
                android:textColor="@drawable/text_white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:background="@drawable/tab_button_selector"
            android:gravity="center" >

            <TextView
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scheduleAdd"
                android:textColor="@drawable/text_white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp" >

        <TextView
            android:id="@+id/prevMonth"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:text="@string/prevMonth"
            android:textColor="@drawable/text_white" />

        <TextView
            android:id="@+id/monthText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#333333"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/nextMonth"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:text="@string/nextMonth"
            android:textColor="@drawable/text_white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/dayrow_scalable"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sun"
            android:textColor="#666666"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/mon"
            android:textColor="#666666"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tue"
            android:textColor="#666666"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wed"
            android:textColor="#666666"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/thu"
            android:textColor="#666666"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fri"
            android:textColor="#666666"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sat"
            android:textColor="#666666"
            android:textSize="12sp" />
    </LinearLayout>

    <GridView
        android:id="@+id/calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:horizontalSpacing="1dp"
        android:numColumns="7"
        android:verticalSpacing="1dp" >
    </GridView>

</LinearLayout>