<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gray_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/tab_normal"
        android:gravity="left" >

        <LinearLayout
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/tab_button_selector"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:paddingRight="11dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/button_back_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/mainTitle"
                android:textColor="@drawable/text_white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal" >

            <TextView
                android:id="@+id/monthly"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/button_selector"
                android:gravity="center"
                android:text="@string/monthly"
                android:textColor="@drawable/text_white" />

            <TextView
                android:id="@+id/weekly"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:background="@drawable/button_selector"
                android:gravity="center"
                android:text="@string/weekly"
                android:textColor="@drawable/text_white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal" >

            <TextView
                android:id="@+id/repeat"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/button_selector"
                android:gravity="center"
                android:text="@string/repeat"
                android:textColor="@drawable/text_white" />

            <TextView
                android:id="@+id/clear"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:background="@drawable/button_selector"
                android:gravity="center"
                android:text="@string/clear"
                android:textColor="@drawable/text_white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </LinearLayout>

    </LinearLayout>

</LinearLayout>