<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/startDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/endDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/contents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="right" >

            <TextView
                android:id="@+id/modify"
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/button_selector"
                android:gravity="center"
                android:text="@string/modify"
                android:textColor="@drawable/text_white" />

            <TextView
                android:id="@+id/delete"
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:background="@drawable/button_selector"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="@drawable/text_white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/gray_divider" />

</LinearLayout>